<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.frogoutofwell.yullfrogapplication.setting.SettingActivity"
    tools:showIn="@layout/activity_setting">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/notice_setting"
        android:textSize="11dp"
        android:textColor="@color/colorSettingText"
        android:layout_marginTop="29dp"
        android:layout_marginStart="13dp"
        android:id="@+id/textView24" />

    <Button
        android:layout_width="328dp"
        android:layout_height="48dp"
        android:text="@string/notice_mobile"
        android:layout_marginTop="8dp"
        android:paddingStart="13dp"
        android:textSize="14dp"
        android:textColor="@color/colorBasicTextBlack"
        android:gravity="center_vertical"
        android:background="@drawable/individual_bg_bar"
        android:id="@+id/btn_mobile" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/service_guide"
        android:textSize="11dp"
        android:textColor="@color/colorSettingText"
        android:gravity="center_vertical"
        android:layout_marginTop="29dp"
        android:layout_marginStart="13dp"
        android:id="@+id/textView25" />

    <Button
        android:layout_width="328dp"
        android:layout_height="48dp"
        android:text="@string/notice"
        android:textSize="14dp"
        android:textColor="@color/colorBasicTextBlack"
        android:gravity="center_vertical"
        android:layout_marginTop="8dp"
        android:paddingStart="13dp"
        android:background="@color/colorWhite"
        android:id="@+id/btn_notice" />

    <View
        android:layout_width="328dp"
        android:layout_height="1dp"
        android:background="@color/colorSingleLine"
        android:layout_below="@+id/btn_notice"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="328dp"
        android:layout_height="48dp"
        android:text="@string/agreement"
        android:textSize="14dp"
        android:textColor="@color/colorBasicTextBlack"
        android:gravity="center_vertical"
        android:paddingStart="13dp"
        android:background="@color/colorWhite"
        android:id="@+id/btn_agreement" />
    <View
        android:layout_width="328dp"
        android:layout_height="1dp"
        android:background="@color/colorSingleLine"
        android:layout_below="@+id/btn_agreement"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="328dp"
        android:layout_height="48dp"
        android:text="@string/guide_info"
        android:gravity="center_vertical"
        android:paddingStart="13dp"
        android:background="@color/colorWhite"
        android:id="@+id/btn_guide" />

    <Button
        android:layout_width="328dp"
        android:layout_height="48dp"
        android:text="@string/version_info"
        android:textSize="14dp"
        android:textColor="@color/colorBasicTextBlack"
        android:gravity="center_vertical"
        android:layout_marginTop="48dp"
        android:paddingStart="13dp"
        android:background="@color/colorWhite"
        android:id="@+id/button8" />

</LinearLayout>
