<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    tools:context="com.frogoutofwell.yullfrogapplication.setting.MobileNoticeActivity">

    <RelativeLayout
        android:layout_width="328dp"
        android:layout_height="48dp"
        android:id="@+id/linearLayout"
        android:layout_marginTop="48dp"
        android:background="@color/colorWhite">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/push_notice"
            android:textSize="14dp"
            android:textColor="@color/colorBasicTextBlack"
            android:paddingStart="13dp"
            android:gravity="center_vertical"
            android:layout_alignParentStart="true"/>

        <android.support.v7.widget.SwitchCompat
            android:layout_width="39dp"
            android:layout_height="22dp"
            android:layout_marginEnd="16dp"
            android:text=""
            android:id="@+id/p_mobile"
            android:layout_marginTop="13dp"
            android:layout_alignParentEnd="true"/>

    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/push_category"
        android:textSize="11dp"
        android:textColor="@color/colorSettingText"
        android:id="@+id/textView1"
        android:layout_marginTop="29dp"
        android:paddingStart="13dp"
        android:layout_below="@+id/linearLayout"/>


    <RelativeLayout
        android:layout_width="328dp"
        android:layout_height="67dp"
        android:id="@+id/linearLayout2"
        android:layout_marginTop="8dp"
        android:layout_below="@+id/textView1"
        android:background="@color/colorWhite">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView2"
            android:text="@string/push_likeact"
            android:textSize="14dp"
            android:textColor="@color/colorBasicTextBlack"
            android:paddingStart="13dp"
            android:layout_marginTop="17dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/push_likeact_detail"
            android:textSize="11dp"
            android:textColor="@color/colorSettingText"
            android:layout_marginTop="13dp"
            android:paddingStart="13dp"
            android:layout_below="@+id/textView2"/>

        <android.support.v7.widget.SwitchCompat
            android:layout_width="39dp"
            android:layout_height="22dp"
            android:layout_marginEnd="16dp"
            android:text=""
            android:id="@+id/p_likeact"
            android:layout_marginTop="13dp"
            android:layout_alignParentEnd="true"/>

    </RelativeLayout>

    <View
        android:layout_width="328dp"
        android:layout_height="1dp"
        android:id="@+id/line1"
        android:background="@color/colorSingleLine"
        android:layout_below="@+id/linearLayout2"
        android:layout_alignParentStart="true" />

    <RelativeLayout
        android:layout_width="328dp"
        android:layout_height="67dp"
        android:id="@+id/linearLayout3"
        android:layout_below="@+id/line1"
        android:background="@color/colorWhite">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView3"
            android:text="@string/push_likenotice"
            android:textSize="14dp"
            android:textColor="@color/colorBasicTextBlack"
            android:paddingStart="13dp"
            android:layout_marginTop="17dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/push_likenotice_detail"
            android:textSize="11dp"
            android:textColor="@color/colorSettingText"
            android:layout_marginTop="13dp"
            android:paddingStart="13dp"
            android:layout_below="@+id/textView3"/>

        <android.support.v7.widget.SwitchCompat
            android:layout_width="39dp"
            android:layout_height="22dp"
            android:layout_marginEnd="16dp"
            android:text=""
            android:id="@+id/p_likenotice"
            android:layout_marginTop="13dp"
            android:layout_alignParentEnd="true"/>

    </RelativeLayout>

    <Button
        android:layout_width="160dp"
        android:layout_height="40dp"
        android:text=""
        android:id="@+id/btn_save"
        android:layout_marginTop="20dp"
        android:background="@drawable/individual_btn_save"
        android:layout_below="@+id/linearLayout3"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
