<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingStart="16dp"
    android:paddingEnd="16dp"
    tools:context="com.frogoutofwell.yullfrogapplication.login.SignupFragment">

    <!-- TODO: Update blank fragment layout -->

    <RelativeLayout
        android:layout_width="328dp"
        android:layout_height="192dp"
        android:layout_marginTop="8dp"
        android:id="@+id/linearLayout"
        android:background="@color/colorWhite">

        <LinearLayout
            android:layout_width="280dp"
            android:layout_height="142dp"
            android:orientation="vertical"
            android:background="@drawable/login_2_bg_box"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true">

            <EditText
                android:layout_width="280dp"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:inputType="textEmailAddress"
                android:hint="@string/signup_email"
                android:paddingStart="21dp"
                android:textColor="@color/colorTextPriview"
                android:textSize="13dp"
                android:ems="10"
                android:id="@+id/edit_email"
                android:layout_alignParentTop="true" />

            <EditText
                android:layout_width="280dp"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:inputType="textPassword"
                android:ems="10"
                android:hint="@string/signup_pwd"
                android:paddingStart="21dp"
                android:textColor="@color/colorTextPriview"
                android:textSize="13dp"
                android:id="@+id/edit_pw"
                android:layout_below="@+id/edit_email" />

            <EditText
                android:layout_width="280dp"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:inputType="textPassword"
                android:ems="10"
                android:hint="@string/signup_pwd_check"
                android:paddingStart="21dp"
                android:textColor="@color/colorTextPriview"
                android:textSize="13dp"
                android:id="@+id/edit_checkpw"
                android:layout_below="@+id/edit_pw" />

        </LinearLayout>

    </RelativeLayout>

    <Button
        android:layout_width="280dp"
        android:layout_height="54dp"
        android:text=""
        android:id="@+id/btn_submit"
        android:layout_marginTop="25dp"
        android:background="@drawable/login_2_btn_submit"
        android:layout_below="@+id/linearLayout"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="69dp" />

</RelativeLayout>
